# powerstrip

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compress.cpp  compress.hpp  decompress.cpp  decompress.hpp  frombytes.py  tobytes.py
include/: common.h  powerstrip.h
src/: compress.cpp  compressbin.cpp  decompressbin.cpp  powerstrip.cpp
test/: test.cpp
